--- a/app-src/scripts/task-list/_task-list-d.scss
+++ b/app-src/scripts/task-list/_task-list-d.scss
@@ -351,6 +351,7 @@ $task-inner-padding-left-right: 6px;
     align-items: center;
     align-content: center;
     flex: 1 1 auto;
+    flex-grow: 1;
     text-align: left;
     outline: none;
     margin-left: 4px;
@@ -359,13 +360,6 @@ $task-inner-padding-left-right: 6px;
     display: block;
     min-height: 20px;
     text-overflow: ellipsis;
-    &:focus {
-      transform: scale(1.1);
-      .is-hide-controls & {
-        transform-origin: center center;
-        transform: scale(1.1) translateX(20px);
-      }
-    }
   }
 
   .actual-notes-wrapper {
